[project]
name = "MRL"
version = "0.1.0"
description = "Modal Reinforcement Learning - serverless RL training for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "modal>=0.73.0",
]

[project.optional-dependencies]
datasets = ["datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
