[project]
name = "mortal"
version = "0.1.0"
description = "MORTAL - Modal Orchestrated Reinforcement Training Architecture for LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "modal>=0.73.0",
]

[project.optional-dependencies]
datasets = ["datasets"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
